plugins/design-system/styles/components/component-example/styles.less
& when (@component-example-enabled) {

  .code-example-wrapper {
    background-color: #fff;
    border-left: 1px solid @component-example-border-color;
    border-right: 1px solid @component-example-border-color;
    display: flex;
    flex-direction: column;
    overflow: hidden;
    padding: 10px;
    position: relative;

    &.header {
      background: @component-example-header-color;
      border-bottom: 1px solid @component-example-border-color;
      border-top: 1px solid @component-example-border-color;
      padding-top: 20px;
    }

    &.footer {
      border-bottom: 1px solid @component-example-border-color;

      .code-example-footer-content {

        button {
          float: right;

          .icon {
            margin-left: 5px;
          }
        }
      }
    }
  }

  .code-example-tab-container {
    background: @component-example-editor-color;
    margin-bottom: 0;
    padding-bottom: 20px;

    .tooltip-wrapper {
      float: right;
      margin-right: 15px;
      margin-top: 15px;
    }

    .code-example-tab:first-child {
      margin-left: 20px;
    }

    .code-example-tab {
      background: @component-example-tab-color;
      border: 1px solid @component-example-border-color;
      cursor: pointer;
      height: 40px;
      margin-right: 0;
      margin-top: 15px;
      padding-left: 20px;
      padding-right: 20px;
      padding-top: 10px;

      &.active {
        background: @component-example-tab-active-color;

        & > .menu-tabbed-item-label {
          color: @component-example-tab-active-text-color;

          &:after {
            background: @component-example-tab-active-color;
          }
        }
      }

      .menu-tabbed-item-label {
        padding-bottom: 0;

        &:hover {
          color: @component-example-tab-active-text-color;
          text-decoration: none;

          &:after {
            background: @component-example-tab-active-color;
          }
        }
      }
    }
  }
}

